--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fast-deep-equal": "^3.1.3",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
