--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-confetti": "^6.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -26,6 +27,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "eslint-config-airbnb": "^18.2.1",
